fix: ensure FXML resource loading and update run instructions